desafio 4 - pipeline jenkins

--- a/src/K8S/deployment.yaml
+++ b/src/K8S/deployment.yaml
@@ -54,7 +54,7 @@ spec:
     spec:
       containers:
       - name: web
-        image: fabricioveronez/kube-news:v1
+        image: fabricioveronez/kube-news:{{TAG}}
         resources:
           limits:
             memory: "128Mi"
